--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -35,6 +35,10 @@ http {
     ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
     ssl_prefer_server_ciphers   on;
 
+    # WebSocket 配置
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+    
     location / {
       proxy_pass http://dd_server/; # 转向dd_server
       # proxy_pass http://127.0.0.1:3000; # 转向dd_server
