--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,6 +18,12 @@ http {
     # server compose_web_5:3000;
   }
   
+  # WebSocket 配置
+  map $http_upgrade $connection_upgrade {
+      default upgrade;
+      ''      close;
+  }
+
   server {
     # listen 80; # 设置监听端口
     listen 443 ssl http2;
