--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,7 @@ http {
   
 
   upstream dd_server { # 设置server集群,负载均衡关键指令
-    server weapp:3000; # 设置具体server,由于我们运行5个web app容器,所以定义5个,这个具体可以按需来进行增减. 
+    server parse:1337; # 设置具体server,由于我们运行5个web app容器,所以定义5个,这个具体可以按需来进行增减. 
     # server hulutimer_server_2:3000;
     # server compose_web_3:3000;
     # server compose_web_4:3000;
