--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,12 +10,9 @@ http {
   access_log /etc/nginx/access.log main; # 输出log
   
 
-  upstream dd_server { # 设置server集群,负载均衡关键指令
-    server parse:1337; # 设置具体server,由于我们运行5个web app容器,所以定义5个,这个具体可以按需来进行增减. 
-    # server hulutimer_server_2:3000;
-    # server compose_web_3:3000;
-    # server compose_web_4:3000;
-    # server compose_web_5:3000;
+  # 设置server集群,负载均衡关键指令
+  upstream dd_server { 
+    server weapp:3000; 
   }
   
   # WebSocket 配置
@@ -25,18 +22,13 @@ http {
   }
 
   server {
-    # listen 80; # 设置监听端口
     listen 443 ssl http2;
     server_name  www.hulupoker.com;
-    # server_name  127.0.0.2;
-
+    # ssl 配置
     ssl                      on;
     ssl_certificate          /etc/nginx/certs/1_www.hulupoker.com_bundle.crt;
     ssl_certificate_key      /etc/nginx/certs/2_www.hulupoker.com.key;
-    
-
     ssl_session_timeout  5m;
-
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
     ssl_prefer_server_ciphers   on;
@@ -44,10 +36,9 @@ http {
     # WebSocket 配置
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
-    
+
     location / {
       proxy_pass http://dd_server/; # 转向dd_server
-      # proxy_pass http://127.0.0.1:3000; # 转向dd_server
     }
 
     location = /favicon.ico {
