--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
 
   # 设置server集群,负载均衡关键指令
   upstream dd_server { 
-    server weapp:3000; 
+    server parse:1337; 
   }
   
   # WebSocket 配置
