添加对screen的解析

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,8 +11,11 @@ http {
   
 
   # 设置server集群,负载均衡关键指令
-  upstream dd_server { 
+  upstream parse_server { 
     server parse:1337; 
+  }
+  upstream screen_server { 
+    server screen:3000; 
   }
   
   # WebSocket 配置
@@ -38,7 +41,10 @@ http {
     proxy_set_header Connection $connection_upgrade;
 
     location / {
-      proxy_pass http://dd_server/; # 转向dd_server
+      proxy_pass http://parse_server/; # 转向dd_server
+    }
+    location /screen {
+      proxy_pass http://screen_server/; # 转向dd_server
     }
 
     location = /favicon.ico {
