添加对screen的解析1

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,11 +41,11 @@ http {
     proxy_set_header Connection $connection_upgrade;
 
     location / {
-      proxy_pass http://parse_server/; # 转向dd_server
+      proxy_pass http://screen:3000; # 转向dd_server
     }
-    location /screen {
-      proxy_pass http://screen_server/; # 转向dd_server
-    }
+    # location /screen {
+    #   proxy_pass http://screen_server/; # 转向dd_server
+    # }
 
     location = /favicon.ico {
       return 204;
