添加对screen的解析2

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,12 +11,12 @@ http {
   
 
   # 设置server集群,负载均衡关键指令
-  upstream parse_server { 
-    server parse:1337; 
-  }
-  upstream screen_server { 
-    server screen:3000; 
-  }
+  # upstream parse_server { 
+  #   server parse:1337; 
+  # }
+  # upstream screen_server { 
+  #   server screen:3000; 
+  # }
   
   # WebSocket 配置
   map $http_upgrade $connection_upgrade {
@@ -41,11 +41,12 @@ http {
     proxy_set_header Connection $connection_upgrade;
 
     location / {
-      proxy_pass http://screen:3000; # 转向dd_server
+      proxy_pass http://parse:1337; # 转向dd_server
     }
-    # location /screen {
-    #   proxy_pass http://screen_server/; # 转向dd_server
-    # }
+
+    location /screen/ {
+      proxy_pass http://screen:3000/; # 转向dd_server
+    }
 
     location = /favicon.ico {
       return 204;
