添加对screen的解析3

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,7 +44,7 @@ http {
       proxy_pass http://parse:1337; # 转向dd_server
     }
 
-    location /screen/ {
+    location /screen {
       proxy_pass http://screen:3000/; # 转向dd_server
     }
 
