--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,11 +41,11 @@ http {
     proxy_set_header Connection $connection_upgrade;
 
     location / {
-      proxy_pass http://parse:1337; # 转向dd_server
+      proxy_pass http://screen:3000/;
     }
 
-    location /screen {
-      proxy_pass http://screen:3000/; # 转向dd_server
+    location /parse/ {
+      proxy_pass http://parse:1337; 
     }
 
     location = /favicon.ico {
