--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,15 +37,19 @@ http {
     ssl_prefer_server_ciphers   on;
 
     # WebSocket 配置
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
+    # proxy_set_header Upgrade $http_upgrade;
+    # proxy_set_header Connection $connection_upgrade;
 
     location / {
       proxy_pass http://screen:3000/;
     }
 
     location /parse/ {
-      proxy_pass http://parse:1337; 
+      proxy_pass http://parse:1337/parse/; 
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Host $host;
     }
 
     location = /favicon.ico {
