--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,7 +44,7 @@ http {
       proxy_pass http://screen:3000/;
     }
 
-    location /api/ {
+    location /parse/ {
       proxy_pass http://parse:1337/parse/; 
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
