--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -48,8 +48,8 @@ http {
       proxy_pass http://parse:1337/parse/; 
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_set_header Host $host;
+      proxy_set_header Connection $connection_upgrade;
+      proxy_set_header Host $host;  
     }
 
     location = /favicon.ico {
